2008-02-24  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/oblivion.xml: fix typo in
	the "def:shebang" style. Spotted by Chris Hollenbeck.

2008-02-06  Murray Cumming  <murrayc@murrayc.com>

	* gtksourceview/gtksourcebuffer.c:
	* gtksourceview/gtksourcebuffer.h:
	(gtk_source_buffer_remove_source_marks): Make the GtkTextIter* 
	parameters const, as they are when used in this way elsewhere in this 
	API. Bug #514655.

2008-02-04  Tor Lillqvist  <tml@novell.com>

	* gtksourceview-zip.in: Look for catalogs in share/locale first,
	as that is where they will be with a properly built GNU gettext.

=== gtksourceview 2.1.2 ===

2008-01-29  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.1.2

2008-01-29  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c:
	* gtksourceview/gtksourcebuffer.h:
	* gtksourceview/gtksourceview.c:
	* gtksourceview/gtksourcemark.c:
	* tests/test-widget.c:

	Rename some of the buffer mark methods to avoid potential conflicts
	with GtkTextBuffer methods in the bindings. Bug #512481.

=== gtksourceview 2.1.1 ===

2008-01-29  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	Release 2.1.1

2008-01-28  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/eiffel.lang: add eiffel syntax file by
	Hasan Karahan <hasan.karahan81@gmail.com>.

2008-01-28  Steve Frécinaux  <code@istique.net>

	* gtksourceview/language-specs/sh.lang: highlight variables inside of
	strings, and other minor highlighting improvements; rename a few
	contextes.

	* gtksourceview/language-specs/classic.xml:
	* gtksourceview/language-specs/tango.xml:
	Adapt for above changes

2008-01-27  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/fortran.lang: highlight floating
	point constants properly; highlight BOZ literals (#496781).
	* gtksourceview/language-specs/makefile.lang: escaped quote does
	not start a string.